# csc578BA2

./: CMakeLists.txt
Lagrange/: CMakeLists.txt
Lagrange/include/: CMakeLists.txt  LagrangeScene.hpp  ObjectGenerator.h  ShapeData.h  Structure.hpp  Swing.hpp  Vertex.h
Lagrange/shaders/: CMakeLists.txt  structure.fs.glsl  swing.fs.glsl  swing.vs.glsl
Lagrange/source/: CMakeLists.txt  LagrangeScene.cpp  ObjectGenerator.cpp  SimpleGL.cpp  Structure.cpp  Swing.cpp
